# field-note-summarizer

./: .gitignore  main.py  pyproject.toml
common/: utils.py
ocr/: router.py
ocr/services/: sarvam_ai.py
