[project]
name = "field-note-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "filetype>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sarvamai>=0.1.28",
]
